--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TA-vanilla-js-fe-todos",
+  "name": "TA-fullstack-vanillajs",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -29,8 +29,10 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "pg": "^8.5.1"
   }
 }
